Config macos